--- a/css/projects.css
+++ b/css/projects.css
@@ -2,27 +2,65 @@
 /* ------------------- Projects------------------------ */
 /* ------------------------------------------------------------ */
 
+.imageBox {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  
+  padding-top: 30px;
+}
+
+.imageBox img {
+  box-shadow: 5px 5px 10px rgb(168, 168, 168);
+  border: 2px solid rgb(38, 38, 38);
+  border-radius: 20px;
+  width: 80%;
+}
+
 .container {
   position: relative;
-  margin: 0 20%;
+  
 }
 
 .container h1 {
   padding-top: 30px;
   color: #ffffff;
+  margin: 0 10%;
+}
+
+.linkText {
+  box-shadow: 5px 5px 5px rgb(168, 168, 168, 0.8);
+  border: 5px solid rgb(38, 38, 38);
+  border-radius: 20px;
+  padding: 15px;
+  background-color: rgb(79, 79, 79);
+  color: white;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.linkText:hover {
+  background-color: rgb(49, 49, 49);
 }
 
 .container p {
+  font-size: 18px;
   color: white;
+  margin: 0 10%;
 }
 
 .container h2 {
   color: white;
-  margin: 0%;
+  margin: 0 10%;
+
 }
 
 .container ul {
   color: white;
   list-style-type: none;
   padding-left: 0;
+  margin: 0 10%;
 }
