--- a/css/about.css
+++ b/css/about.css
@@ -38,7 +38,7 @@
 }
 
 .cv {
-  box-shadow: 5px 5px 5px rgba(210, 201, 201, 0.6);
+  box-shadow: 5px 5px px rgba(210, 201, 201, 0.6);
   border: 4px solid rgba(210, 201, 201);
   margin-top: 5vh;
   position: relative;
