--- a/css/styles.css
+++ b/css/styles.css
@@ -79,8 +79,7 @@ body {
   
   display: flex;
   justify-content: center;
-
-  width: 100%;
+  height: 100px;
 }
 
 /* The Project Container for each Project */
@@ -92,7 +91,7 @@ body {
   width: 100%;
   display: flex;
 
-  background-color: rgb(255, 241, 241);
+  background-color: rgb(255, 255, 255);
   color: white;
   flex-direction: column;
 
