--- a/css/aboutmedia.css
+++ b/css/aboutmedia.css
@@ -206,7 +206,7 @@
   }
 
  .about {
-    display: none;
+    top: 0;
     width: 30%;
     font-size: 4vw;
   }
@@ -233,6 +233,7 @@
   .experience {
     flex-direction: column;
     margin-right: 5%;
+    margin-left: 5%;
   }
 
   .languages {
